--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="opendata-title">Открытые данные</div>
 
                     <!-- opendata block -->
-                    <div class="opendata-block open">
+                    <div class="opendata-block">
                         <div class="opendata-block-title"><img src="images/opendata-block-1.svg" alt="" />Исследователи</div>
 
                         <!-- opendata block container -->
@@ -91,7 +91,7 @@
                                 <div class="opendata-group-title">Количество стипендиатов и грантополучателей по выбранному фонду, чел.</div>
 
                                 <!-- opendata group container -->
-                                <div class="opendata-group-container" data-link="ajax/form.html?set=1">
+                                <div class="opendata-group-container" data-link="ajax/form.html?set=1" id="report_1">
 
                                 </div>
                                 <!-- opendata group container END -->
@@ -100,7 +100,7 @@
                             <!-- opendata group END -->
 
                             <!-- opendata group -->
-                            <div class="opendata-group open">
+                            <div class="opendata-group">
                                 <div class="opendata-group-title">Количество стипендиатов и грантополучателей по конкурсам выбранного фонда, чел.</div>
 
                                 <!-- opendata group container -->
@@ -211,7 +211,7 @@
                                 <div class="opendata-group-title">Количество стипендиатов и грантополучателей по всем фондам, чел.</div>
 
                                 <!-- opendata group container -->
-                                <div class="opendata-group-container">
+                                <div class="opendata-group-container" id="report_2">
 
                                     <div class="opendata-filter">
                                         <form action="ajax/form.html?set=1" method="post">
